<resources>
    <string name="app_name">MagicDB</string>
    <string name="txt_message">No Card Found</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="usernameHint">User Name</string>
    <string name="passwordHint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="searchHint">Search</string>
    <string name="scan">Scan</string>
    <string name="list">List</string>
    <string name="logout">Logout</string>
    <string name="listError">NO CARDS AVAILABLE</string>
    <string name="amountPrompt">Enter an amount</string>
    <string name="amountHint">1&#8211;999</string>
    <string-array name="sort_order_array">
        <item>Name</item>
        <item>Cost</item>
        <item>Color</item>
        <item>Quantity</item>
    </string-array>
</resources>
