<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBG"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/scanButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/listButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:onClick="scan"
        android:text="@string/scan" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="list"
        android:text="@string/list" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/listButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="logout"
        android:text="@string/logout" />

</RelativeLayout>